sc评论功能
(cherry picked from commit 2bb2ed6dbc4b995c8b13a83bbfcc888cc631abfa)